objects/Consultant__c.object
<CustomObject>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User_Profile__r.FirstName + &apos; &apos; + User_Profile__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Profile</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Consultant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consultant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>